# VS_Praktikum-2025-SoSe

./: README.md  docker-compose.yaml  example.proto  pom.xml
.devcontainer/: devcontainer.json
ActuatorController/: pom.xml
Application/View/: ui.html  ui.proto
Client/: .gitignore  README.md
Core/: Dockerfile
Docs/: .gitignore  arc42-template.aux  arc42-template.glo  arc42-template.glsdefs  arc42-template.toc  arc42-template.xdy  bausteinsicht.tex  einfuehrung.tex  entwurfsentscheidungen.tex  glossar.tex  kontextabgrenzung.tex  konzepte.tex  laufzeitsicht.tex  layout.sty  loesungsstrategie.tex  qualitaetsszenarien.tex  randbedingungen.tex  risiken.tex  title.tex  verteilungssicht.tex  vs-arc42-dokumentation.aux  vs-arc42-dokumentation.toc  vs-arc42-dokumentation.xdy
Docs/Application/: .gitignore  (+12 more)
Examples/hello-grpc-rust_itsBoard/: Cargo.toml  build.rs  memory.x
Examples/hello-grpc-rust_itsBoard/proto/: hello.proto
Examples/hello-grpc-rust_itsBoard/src/: client.rs
Examples/hello-grpc-rust_itsBoard/src/proto/: hello.rs
IO/: .gitignore  README.md
Middleware/: DnsService.Dockerfile
Protocol/: .gitignore  Protocol.tex  Wochenbericht_1.tex  Wochenbericht_10.tex  Wochenbericht_11.tex  Wochenbericht_12.tex  Wochenbericht_2.tex  Wochenbericht_3.tex  Wochenbericht_4.tex  Wochenbericht_5.tex  Wochenbericht_6.tex  Wochenbericht_7.tex  Wochenbericht_8.tex  Wochenbericht_9.tex  Wochenbericht_Template.tex  example (1).tex
Robot/: README.md
View/: pom.xml
startup/: run-core.bat  run-dns.bat  run-view.bat  run-watchdog.bat  startActuatorcontroller.sh
(+381 files in other folders)
