[package]
name = "itsbrd_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name="client"
path="./src/client.rs"


[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
embedded-hal = "1.0.0-alpha.8"
stm32f4xx-hal = { version = "0.14.0", features = ["stm32f429", "rt"] }
stm32-eth = { version = "0.4", features = ["stm32f429"] }
linked_list_allocator = "0.10"
prost = { version = "0.12", default-features = false, features = ["prost-derive"] }
smoltcp = { version = "0.10", default-features = false, features = ["proto-ipv4", "socket", "socket-tcp", "medium-ethernet"] }

# Für no_std
[features]
default = []

[build-dependencies]
prost-build = "0.12"



